fix: keep Runtime Center compatible with Android minSdk 28